<resources>
    <string name="app_name">HW07A</string>
    <string name="input_placeholder">Write a message</string>
    <string name="username"></string>
    <string name="passwordid" />
    <string name="loginbtn">Login</string>
    <string name="signupbtn">Sign Up</string>
    <string name="malebtn">Male</string>
    <string name="femalebtn">Female</string>
    <string name="createbtn">Create</string>
    <string name="firstname" />
    <string name="lastname" />
    <string name="createtripbtn">Create Trip</string>
    <string name="signoutbtn">Sign Out</string>
    <string name="tripname"></string>
    <string name="chatname" />
    <string name="tripcreatebtn">Trip Create</string>
    <string name="userid" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleid">Title:</string>
    <string name="locationid">Location:</string>
    <string name="titleval" />
    <string name="locationval" />
    <string name="joinbtn">Join</string>
    <string name="chatnamer">Chat Name:</string>
    <string name="chatval" />
    <string name="showmessage" />
</resources>
