<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="187dp"
        android:layout_height="108dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="34dp"
        android:src="@android:drawable/toast_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:text="@string/firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <RadioButton
            android:id="@+id/male_btn"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/malebtn" />

        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/femalebtn" />
    </RadioGroup>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="12dp"
        android:text="@string/createbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_grp" />

    <EditText
        android:id="@+id/username_id"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/passwordid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_id" />
</androidx.constraintlayout.widget.ConstraintLayout>