<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripActivity">

    <Button
        android:id="@+id/create_trip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="32dp"
        android:text="@string/createtripbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/signoutbtn"
        app:layout_constraintStart_toEndOf="@+id/create_trip_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/recycler_view"-->
    <!--        android:layout_width="387dp"-->
    <!--        android:layout_height="547dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="36dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/user_id" />-->

    <TextView
        android:id="@+id/user_id"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:text="@string/userid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_trip_btn" />

    <ImageView
        android:id="@+id/profile_id"
        android:layout_width="85dp"
        android:layout_height="87dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <!--    <android.support.design.widget.TabLayout-->
<!--        android:id="@id/tab_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap-content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:background="@color/colorPrimaryDark"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/user_id"-->
<!--        app:tabIndicatorColor="@color/colorPrimaryDark"-->
<!--        app:tabSelectedTextColor="@color/colorPrimaryDark"-->
<!--        app:tabTextColor="@color/colorPrimaryDark" />-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id"
        app:tabIndicatorColor="#fff"
        app:tabSelectedTextColor="#fff"
        app:tabTextColor="#fff" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="407dp"
        android:layout_height="544dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>